--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         :root {
             --primary-white: #ffffff;
             --dark-accent: #1e293b;
-            --dark-transparent: rgba(30, 41, 59, 0.9); /* Новый цвет для затемненных элементов */
+            --dark-transparent: rgba(30, 41, 59, 0.9);
         }
 
         body {
@@ -21,20 +21,17 @@
             min-height: 100vh;
         }
 
-        /* Шапка профиля */
         .profile-header {
-            padding: 10px 7px 20px;
-            background: var(--dark-transparent); /* Изменено на темный фон */
+            padding: 0px 75px 0px;
             text-align: center;
-            margin: 20px;
-            border-radius: 15px;
-            border: 2px solid var(--primary-white);
-            backdrop-filter: blur(8px);
+            margin: 40px;
+            border-radius: 10px;
+            border: 0px solid var(--primary-white);
         }
 
         .profile-photo {
-            width: 250px;
-            height: 250px;
+            width: 200px;
+            height: 200px;
             border-radius: 50%;
             object-fit: cover;
             border: 3px solid var(--primary-white);
@@ -43,7 +40,6 @@
             box-shadow: 0 8px 20px rgba(255,255,255,0.15);
         }
 
-        /* Контейнер с навыками */
         .skills-container {
             max-width: 550px;
             margin: 0 auto;
@@ -66,7 +62,6 @@
             text-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
-        /* Сетка навыков */
         .skill-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -75,7 +70,7 @@
         }
 
         .skill-card {
-            background: var(--dark-transparent); /* Изменено на темный фон */
+            background: var(--dark-transparent);
             border-radius: 12px;
             padding: 25px;
             border: 2px solid var(--primary-white);
@@ -96,7 +91,6 @@
             margin-bottom: 15px;
         }
 
-        /* Кнопка связи */
         .telegram-btn {
             display: inline-flex;
             align-items: center;
@@ -107,13 +101,31 @@
             text-decoration: none;
             border-radius: 8px;
             transition: all 0.3s ease;
-            margin: 40px 0;
+            margin: 15px 0;
             border: 2px solid var(--primary-white);
         }
 
-        .telegram-btn:hover {
+        .email-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 15px 40px;
+            background: var(--dark-accent);
+            color: var(--primary-white);
+            text-decoration: none;
+            border-radius: 8px;
+            transition: all 0.3s ease;
+            margin: 15px 0;
+            border: 2px solid var(--primary-white);
+        }
+
+        .telegram-btn:hover, .email-btn:hover {
             transform: scale(1.05);
             background: rgba(255,255,255,0.9);
+        }
+
+        .email-btn:hover {
+            background: rgba(30, 41, 59, 0.9);
         }
 
         @media (max-width: 768px) {
@@ -134,20 +146,23 @@
             .skills-container {
                 padding: 30px 10px;
             }
+
+            .telegram-btn, .email-btn {
+                margin: 10px 0;
+                padding: 12px 30px;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- Шапка профиля -->
     <header class="profile-header">
         <img src="sitephoto.jpg" alt="Фото профиля" class="profile-photo">
         <h1 class="name-title">Юрчук Максим</h1>
         <div class="position">Middle QA Engineer</div>
+        <div class="position">Путешествия, горы, поиск багов</div>
     </header>
 
-    <!-- Основной контент -->
     <div class="skills-container">
-        <!-- Профессиональный опыт -->
         <div class="skill-grid">
             <div class="skill-card">
                 <i class="skill-icon fas fa-mobile-alt"></i>
@@ -162,7 +177,6 @@
             </div>
         </div>
 
-        <!-- Технические навыки -->
         <div class="skill-grid">
             <div class="skill-card">
                 <i class="skill-icon fas fa-code"></i>
@@ -177,7 +191,6 @@
             </div>
         </div>
 
-        <!-- Дополнительно -->
         <div class="skill-grid">
             <div class="skill-card">
                 <i class="skill-icon fas fa-file-alt"></i>
@@ -193,11 +206,15 @@
         </div>
     </div>
 
-    <!-- Кнопка связи -->
-    <div style="text-align: center;">
+    <div style="text-align: center; margin: 30px 0;">
         <a href="https://t.me/qqqqqqqwertyy" class="telegram-btn">
             <i class="fab fa-telegram"></i>
             Связаться в Telegram
+        </a>
+        
+        <a href="mailto:makcyurchuk@yandex.ru" class="email-btn">
+            <i class="fas fa-envelope"></i>
+            Написать на Email
         </a>
     </div>
 </body>
