--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 <body>
     <header class="profile-header">
         <img src="sitephoto.jpg" alt="Фото профиля" class="profile-photo">
-        <h1 class="name-title">Юрчук Максим</h1>
-        <div class="position">Middle QA Engineer</div>
-        <div class="position">Путешествия, горы, поиск багов</div>
+        <h1 class="name-title">Maxim Yurchuk </h1>
+        <div class="position"><b> QA Engineer</b></div>
+        <div class="position">Путешествия, горы, поиск багов и проблем</div>
     </header>
 
     <div class="skills-container">
